修正：mybbs/resultページで投稿内容受け取取れる

--- a/tomcat/webapps/mybbs/WEB-INF/web.xml
+++ b/tomcat/webapps/mybbs/WEB-INF/web.xml
@@ -20,7 +20,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>ResultServlet</servlet-name>
-        <url-pattern>/post</url-pattern>
+        <url-pattern>/result</url-pattern>
     </servlet-mapping>
 
 </web-app>
