--- a/tomcat/webapps/mywork/WEB-INF/web.xml
+++ b/tomcat/webapps/mywork/WEB-INF/web.xml
@@ -208,6 +208,23 @@
     </servlet-mapping>    
     
     
+        <servlet>
+        <servlet-name>ShowForm</servlet-name>
+        <servlet-class>FormServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ShowForm</servlet-name>
+        <url-pattern>/form</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>ShowResult</servlet-name>
+        <servlet-class>ResultServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ShowResult</servlet-name>
+        <url-pattern>/result</url-pattern>
+    </servlet-mapping>
     
     
 </web-app>
